# complete-dbt-bootcamp-zero-to-hero-udemy

./: README.md  pyproject.toml
dbtlearn/models/: docs.md  schema.yml
dbtlearn/models/dim/: dim_hosts_cleansed.sql  dim_hosts_clenased.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
dbtlearn/models/fct/: fct_reviews.sql
dbtlearn/models/mart/: mart_fullmoon_reviews.sql
dbtlearn/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbtlearn/tests/: consistent_created_at.sql  dim_listings_minimum_nights.sql
