[tool.poetry]
name = "complete-dbt-bootcamp-zero-to-hero-udemy"
version = "0.1.0"
description = ""
authors = ["GabrielSGoncalves <gabrielgoncalvesbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-snowflake = "1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
